--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.0",
+    "@types/lodash": "^4.14.186",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.11.6",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
